# llms_overconfidence

./: README.md  all_bets.csv  bet_analysis_results_private_bet_experiments_diff_models.json  bet_analysis_results_private_self_bet.json  bet_analysis_results_private_self_bet_anchored.json  bet_analysis_results_public_bets.json  explain_csv.md  hello.py  initial_confidence_detailed_stats.csv  initial_confidence_mean_sd_sample_summary.csv  model_token_usage_and_cost.json  multi_round_bets.csv  multi_round_confidence_escalation.csv  multi_round_escalation_summary.csv  multi_round_initial_confidence_stats.csv  multi_round_per_model_overconfidence_tests.csv  multi_round_pivoted_bets.csv  per_model_overconfidence_tests.csv  pyproject.toml  write.sh
config_data/: debate_models.json  debate_prompts.yaml  judge_models.json  topic_list.json
experiments/: private_bet_experiment_pairings.json
experiments/SELF_REDTEAM_DEBATE/: anthropic_claude-3.5-haiku_vs_self_20250513_224331.json  anthropic_claude-3.5-haiku_vs_self_20250513_224534.json  anthropic_claude-3.5-haiku_vs_self_20250513_224743.json  anthropic_claude-3.5-haiku_vs_self_20250513_224949.json  anthropic_claude-3.5-haiku_vs_self_20250513_225146.json  anthropic_claude-3.5-haiku_vs_self_20250513_225351.json  anthropic_claude-3.7-sonnet_vs_self_20250513_201706.json  anthropic_claude-3.7-sonnet_vs_self_20250513_202102.json  anthropic_claude-3.7-sonnet_vs_self_20250513_202623.json  anthropic_claude-3.7-sonnet_vs_self_20250513_203059.json  anthropic_claude-3.7-sonnet_vs_self_20250513_203452.json  (+49 more)
(+291 files in other folders)
